--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Привет</h1>
+    <h1>Иди на кухню</h1>
     <script src="./JS/script.JS"></script>
 </body>
 </html>
